2009-02-06  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-unknown-source.c: Fix problem constructing
	SeahorseUnknownSource due to read-only property. 
	
2009-02-05  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-context.c: 
	* libseahorse/seahorse-context.h: Ref objects while the 
	context is being destroyed, so that removing an object 
	that was removed by another object doesn't crash. We need
	a new ownership model....

	* pgp/seahorse-pgp-key.c: Register UIDs with the context. This
	enables their IDs to be once again used over DBus. Fixes bug #570704
	
2009-02-04  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* libcryptui/Makefile.am:
	* libcryptui/tests/Makefile.am:
	* libcryptui/tests/cryptui-test-ui.c: Revert accidental deletion 
	of libcryptui test program deletion in svn commit [2716]
	
	* daemon/seahorse-service-keyset.c: Don't return objects without ids
	via libcryptui. Fixes bug #570454

	* daemon/seahorse-service-crypto.c:
	* pgp/seahorse-gpgme-key.c:
	* pgp/seahorse-gpgme-source.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-pgp-key.c:
	* pgp/seahorse-pgp-key.h:
	* pgp/seahorse-pgp-signature.c:
	* pgp/seahorse-server-source.c: Rework functions for converting pgp keyids
	into object ids, including the canonize id function. 
	
	* pgp/seahorse-gpgme-uid.c: Add object id to UID objects, which helps them
	to show up in libcryptui. 

2009-02-04  Adam Schreiber  <sadam@clemson.edu>

    * pgp/seahorse-sign.glade:
    * ssh/seahorse-ssh-upload.glade:
    * ssh/seahorse-ssh-generate.glade: Remove explicit line breaks from glade
    files.  Patch from Gabor Kelemen.  Fixes bug #570485
    
2009-02-03  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: increment version number to 2.25.91

=== seahorse 2.25.90 ===

2009-02-03  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * NEWS:
    * README: Release version 2.25.1
