@@ -3,6 +3,9 @@
 	* libseahorse/seahorse-unknown-source.c: Fix problem constructing
 	SeahorseUnknownSource due to read-only property. 
 	
+	* libseahorse/seahorse-context.c: Fix problem with not creating 'missing'
+	objects when the 'auto_retrieve' setting isn't set. Fixes bug #570456
+	
 2009-02-05  Stef Walter  <stef@memberwebs.com>
 
 	* libseahorse/seahorse-context.c: 
